<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_goal">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="414dp"
        android:layout_height="183dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark_blue_header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="65dp"
        android:text="My Goals"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.123" />

    <View
        android:id="@+id/view7"
        android:layout_width="365dp"
        android:layout_height="528dp"
        android:background="@drawable/custom_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Update Goal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <EditText
        android:id="@+id/loanName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Holiday to kandy"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/loanAmount"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:text="23/10/2023"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanName" />

    <EditText
        android:id="@+id/loanDate"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:hint="Rs.3500.00"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanAmount" />

    <EditText
        android:id="@+id/loanSettle"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/crud_input"
        android:ems="10"
        android:hint="Rs.3150.00"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanDate" />


    <Button
        android:id="@+id/AddLoan"
        android:layout_width="126dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/crud_button"
        android:text="Save"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/cancleBTN"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/crud_button"
        android:text="Cancle"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/loanSettle"
        app:layout_constraintVertical_bias="0.824" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:background="@color/gray_view"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/home_btn"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/transaction_btn_nav"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_btn"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/transaction"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/target_btn_transaction"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transaction_btn_nav"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/target"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/bill_btn"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/target_btn_transaction"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/bill"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/loan_btn"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bill_btn"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/loan1"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton50"
        android:layout_width="82dp"
        android:layout_height="78dp"
        android:backgroundTint="#003086"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_account_circl24" />


</androidx.constraintlayout.widget.ConstraintLayout>